--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@ https://templatemo.com/tm-531-reflux
                       </p>
                   </div>
               </div>
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                   <div class="service-item">
                       <div class="first-service-icon service-icon"></div>
                       <p>I've attached a copy of my resume that details my projects and experience in Software  Developing.Thank you for your time and consideration.</p>
                       <a href="assets/images/CV-SHAHADAT HOSSAIN.pdf" alt="" target="_blank"> CV-SHAHADAT HOSSAIN</a>
                   </div>
-              </div>
+              </div> -->
           </div>
         </div>
       </section>
