--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ https://templatemo.com/tm-531-reflux
   </head>
 
   <body>
+     <a href='https://acadooghostwriter.com/'>ACADOOghostwriter.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=42aa0a47249a0e1542d9d1f52f8b52afb1c2d4db'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1078135/t/5"></script>
     <div id="page-wraper">
       <!-- Sidebar Menu -->
       <div class="responsive-nav">
