--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@ https://templatemo.com/tm-531-reflux
     <link rel="stylesheet" href="assets/css/templatemo-style.css" />
     <link rel="stylesheet" href="assets/css/owl.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <style>
+        .counterimg {
+            width: 38%;
+            overflow: hidden;
+        }
+    </style>
   </head>
 
   <body>
@@ -49,7 +55,10 @@ https://templatemo.com/tm-531-reflux
                     <li><a href="#section2">What I’m good at</a></li>
                     <li><a href="#section3">My Work</a></li>
                     <li><a href="#section4">Contact Me</a></li>
-                </ul>
+                </ul>              
+                        <span class="counterimg">
+                            <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1078144/t/13"></script>
+                        </span>
             </nav>
             <div class="social-network">
               <ul class="soial-icons">
@@ -82,9 +91,6 @@ https://templatemo.com/tm-531-reflux
       <section class="section about-me" data-section="section1">
         <div class="container">
           <div class="section-heading">
-            
-     <a href='https://acadooghostwriter.com/'>ACADOOghostwriter.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=42aa0a47249a0e1542d9d1f52f8b52afb1c2d4db'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1078135/t/5"></script>
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span>"Hello, I'm Shahadat Hossain, a Software Engineer with a passion for software development. With a blend of 4 years of experience and a deep love for dot net, I'm dedicated to software development. Join me on this journey as I share my story and work."</span>
